@startuml

package user {
    class User
    interface Users

    class Friend
    interface Friends
    Friend --> User
}

package game {
    class Game

    interface Games
}

package table {
    class Table

    class Player
    User <-- Player

    interface State

    Table --> Game
    Table --> Player
    Table --> State

    interface Tables
}

package Rating {
    class Rating
    Rating -> Table
    User <-- Rating

    interface Ratings
}

@enduml